			  - 2002-09-07:  Added delay and exit-console support to pop-ups  (Niels)
			  - 2002-09-08:  Added support for different types of Geotracking databases  (Niels)
			  - 2002-09-09:  Added support for the GeoIP geotracking database  (Vitaliy Fuks)
			  - 2002-09-10:  Added support for appending a popup or interstitial zone to a plain bannerzone  (Matteo)

			+ Misc bugfixes
			  - 2002-07-25:  On some systems history pages showed '-0' instead of simply '-' (Matteo)
			  - 2002-07-26:  stats-affiliate-zones.php was displaying affiliateid instead of zoneid  (Matteo)
			  - 2002-07-26:  The size of a FTP stored banner wasn't displayed in banner-edit.php  (Matteo)
			  - 2002-07-27:  When upgrading from a release without priority system, no banner was shown; added priority recalculation to the upgrade process if needed  (Matteo)
			  - 2002-07-30:  When editing a banner, the Keyword field wasn't updated when it was left empty  (Niels)
			  - 2002-07-30:  Campaigns with weight 0 were mistakenly shown as high priority campaigns on the campaign-edit page  (Niels)
			  - 2002-07-30:  Fixed E_ALL error in lib-view-main.inc.php  (Pawel Marzec)
			  - 2002-08-01:  Link to banner-edit and campaign-edit were shown when logged in as publisher on the zone-include page  (Niels)
			  - 2002-08-05:  Added new cookie routines which should fix some very rare login problems with IE6  (Niels)
			  - 2002-08-05:  When no banner can be delivered adview.php now returns a 1 x 1 pixel transparent gif file, so no broken image icon is shown  (Niels)
			  - 2002-08-07:  {url_prefix} wasn't replaced by adview.php when using Netscape 4.7  (Niels)
			  - 2002-08-08:  Delivery limitations can now contain quotes without generating errors during delivery  (Niels)
			  - 2002-08-08:  Adview.php tried to display Flash banners during plain remote invocation  (Niels)
			  - 2002-08-08:  Time capping and log protection can now handle a 6 hour time difference between user and server  (Niels)