@@ -101,11 +101,11 @@ unset($Session);
 // Authorize the user
 phpAds_Start();
 
+
 // Load language strings
-if (file_exists("../language/".strtolower($phpAds_config['language'])."/default.lang.php"))
-	require ("../language/".strtolower($phpAds_config['language'])."/default.lang.php");
-else
-	require ("../language/english/default.lang.php");
+@include (phpAds_path.'/language/english/default.lang.php');
+if ($phpAds_config['language'] != 'english' && file_exists(phpAds_path.'/language/'.$phpAds_config['language'].'/default.lang.php'))
+	@include (phpAds_path.'/language/'.$phpAds_config['language'].'/default.lang.php');
 
 
 // Register variables
