@@ -57,10 +57,11 @@ function phpAds_SendMaintenanceReport ($clientid, $first_unixtimestamp, $last_un
 		$client = phpAds_dbFetchArray($res_client);
 		
 		// Load client language strings
-		if (isset($client['language']) && $client['language'] != "")
-			include (phpAds_path."/language/".$client['language']."/default.lang.php");
-		else
-			include (phpAds_path."/language/".$phpAds_config['language']."/default.lang.php");
+		@include (phpAds_path.'/language/english/default.lang.php');
+		if ($client['language'] != '') $phpAds_config['language'] = $client['language'];
+		if ($phpAds_config['language'] != 'english' && file_exists(phpAds_path.'/language/'.$phpAds_config['language'].'/default.lang.php'))
+			@include (phpAds_path.'/language/'.$phpAds_config['language'].'/default.lang.php');
+		
 		
 		$active_campaigns = false;
 		$log = "";
