@@ -28,6 +28,7 @@ CVS			+ Added the ability to serve and manage text ads  (Niels, 2002-07-29)
 			  - 2002-09-08:  Added support for different types of Geotracking databases  (Niels)
 			  - 2002-09-09:  Added support for the GeoIP geotracking database  (Vitaliy Fuks)
 			  - 2002-09-10:  Added support for appending a popup or interstitial zone to a plain bannerzone  (Matteo)
+			  - 2002-09-15:  The english language file is now always loaded first, then the user specified file is loaded  (Niels)
 
 			+ Misc bugfixes
 			  - 2002-07-25:  On some systems history pages showed '-0' instead of simply '-' (Matteo)
